# prontuario_server

./: .env.example  .gitignore  .secrets.example.json  Dockerfile  README.md  alembic.ini  docker-compose.tls.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: rotate-encryption.yml
ai_docs/: data_classification.md  observabilidade_arquitetura.md  observabilidade_dns_tls.md  observabilidade_fase2_seguranca.md  observabilidade_fase3_collector.md  observabilidade_fase4_instrumentacao.md  observabilidade_fase5_dashboards_alertas.md  observabilidade_lgtm_checklist.md  observabilidade_rede_firewall.md  observabilidade_slos.md  plano_desenvolvimento_checklist.md  plano_testes_automatizados_checklist.md  principles.md
ai_docs/features/: agenda.md  backlog  evolutions.md  task_audit_hardening.md  task_consultations_backend_expansion.md  task_evolutions_backend.md
alembic/: env.py
alembic/versions/: 20260226_0001_initial_schema.py  20260227_0002_encrypt_highly_sensitive_fields.py  20260303_0003_image_upload_tracking.py  20260303_0004_audit_request_id.py  20260316_0005_doctor_preferences.py  20260604_0006_evolution.py  20260624_0007_consultation_schedule.py  20260626_0008_prd1_consultation_patient_core.py  20260626_0009_prd1_remaining_entities.py  20260627_0010_consultation_notes.py  20260628_0011_medical_history_snapshots.py
app/application/: container.py
app/infrastructure/: settings.py
app/presentation/: auth.py  dependencies.py  main.py  request_context.py
scripts/: generate_local_tls_cert.sh  process_domain_events.py  reencrypt_fields.py
(+150 files in other folders)
