[project]
name = "prontuario-api"
version = "0.1.0"
description = "Prontuario dermatologico com FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "sqlalchemy>=2.0.37,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "PyJWT>=2.10.0,<3.0.0",
  "structlog>=24.4.0,<26.0.0",
  "cryptography>=44.0.0,<46.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "opentelemetry-api>=1.30.0,<2.0.0",
  "opentelemetry-sdk>=1.30.0,<2.0.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.30.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.51b0,<1.0.0",
  "opentelemetry-instrumentation-httpx>=0.51b0,<1.0.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.51b0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "alembic>=1.14.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
  "ruff>=0.9.0,<1.0.0"
]
aws = [
  "boto3>=1.37.0,<2.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]
